# railway

./: .gitignore  .gitmodules  README.md  dummy.lp  pyproject.toml  rail.lp  rail_hannes.lp  rail_new.lp  railway.lp  requirements.txt  show_graph.sh  track_type_decoding.lp  used_track_types.lp
benchmarks/: README.md  circle.lp  congestion.lp  crossing_grid.lp
benchmarks/artificial/: crossing.lp  crossing_distractions.lp  detour.lp
encodings/: back_connections.lp  common.lp  connection.lp  connection2.lp  encoding_base.lp  final_positions.lp  order_test.lp  rail_new_actions.lp  rail_new_graph_steps.lp  track_type_decoding.lp
encodings/legacy/: rail_new_graph_planning.lp  rail_new_graph_simple.lp
encodings/track_edges/: all.lp  type_01_straight.lp  type_05_double_slip_switch.lp
generated_benchmarks/instances/: instance_0.lp  instance_1.lp
generated_benchmarks/solutions/: instance_0.json  instance_1.json
generated_benchmarks/statistics/: Baseline.csv  BaselineMean.csv  BaselineMedian.csv  BaselineStdDev.csv  PartialOdering.csv  PartialOderingMean.csv  PartialOderingMedian.csv  PartialOderingStdDev.csv
graph/: create_directed_graph.lp  viz.lp
instances/: circle_01.lp  circle_02.lp  command_key.lp  cross_trains.lp  crossing_large.lp  double_slip_switch_simple.lp  env_01.lp  env_02.lp  env_03.lp  infinity.lp  simple_type_2.lp  super_simple_01.lp  switch-01.lp  switch_01.lp
legacy/encodings/: rail_new.lp  rail_new_graph_steps.lp
legacy/instances/: circle_01.lp  (+6 more)
sequence/: sequence.lp  viz.lp
visualizer/: instance.lp  nice.py  output.json  seq.py
(+195 files in other folders)
