[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "flatgraph"
authors = [
    { name = "Hannes Weichelt", email = "main@hweichelt.de" },
    { name = "David Bunker", email = "davidlbunker@gmail.com" }
]
description = "Graph based flatland solver using partial train ordering"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dynamic = [ "version" ]
readme = "README.md"
dependencies = [
    "clingo>=5.7.1",
]


[project.urls]
Homepage = "https://github.com/dbunker/railway.git"

[project.optional-dependencies]
format = [ "black", "isort", "autoflake" ]
lint_pylint = [ "pylint" ]
typecheck = [ "types-setuptools", "mypy" ]
test = [ "coverage[toml]" ]
doc = [ "sphinx", "furo", "nbsphinx", "sphinx_copybutton", "myst-parser" ]
dev = [ "readmd[test,typecheck,lint_pylint]" ]

[project.scripts]
flatgraph = "flatgraph.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
